framec_tests/language_specific/java/v3_mir/positive/inside_block_comment_transition_ignored.frm
@target java

system S {
    machine:
        $A {
            e() {
                /* block comment with -> $B() and => $^ */
                native();
            }
        }
}

