framec_tests/language_specific/java/v3_mir/negative/transition_block_comment_across_then_native.frm
@target java

system S {
    machine:
        $A {
            e() {
                -> $B() /* start
                   still comment
                   */ native();
            }
        }
}
